--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             </div>
             <div class="Box Comida" onclick="seleciona(this,'Comida')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/mackerel burger.webp">
+                    <h4>Mackerel Burger</h4>
+                    <h5>Hamburguer de cavalinha gourmet</h5>
+                    <h6>R$27,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box Comida" onclick="seleciona(this,'Comida')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/Omurice.webp">
+                    <h4>Omurice Risotto</h4>
+                    <h5>Mistura de Omurice e Risotto</h5>
+                    <h6>R$39,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
@@ -117,10 +117,10 @@
         <section class="Sobremesa Desert">
             <div class="Box" onclick="seleciona(this,'Desert')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
+                    <img src="Imagens/Buche de Noel.webp">
                     <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <h5>Típico do natal e ano novo francês</h5>
+                    <h6>R$81,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
@@ -178,30 +178,3 @@
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
 </body>
 </html>
-
-
-<!--
-____██████________________________██████____
- __██████████__████████████████__██████████__
-██████████████________________██████████████
-████████____________________________████████
-██████________________________________██████
-__██____________________________________██__
-__██____________________________________██__
-██________██████____________██████________██
-██______██████████________██████████______██
-██____████████__██________██__████████____██
-██____████████__██________██__████████____██
-██____██████████____________██████████____██
-██______██████______████______██████______██
-__██________________████________________██__
-__████████__▒▒▒▒▒▒________▒▒▒▒▒▒__████████__
-████████████▒▒▒▒▒▒▒▒____▒▒▒▒▒▒▒▒████████████
-██████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██████████████
-██████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██████████████
-██████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██████████████
-__████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒████████████__
-____████████__▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒__████████____
-________________▒▒▒▒▒▒▒▒▒▒▒▒________________
-__________________▒▒▒▒▒▒▒▒__________________
-____________________▒▒▒▒____________________ -->
