--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             </div>
             <div class="Box Comida" onclick="seleciona(this,'Comida')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/ichiraku.jpg">
+                    <h4>Ichiraku Ramen</h4>
+                    <h5>Ramen clássico do Ichiraku</h5>
+                    <h6>R$15,60</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box Comida" onclick="seleciona(this,'Comida')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/onigiri.png">
+                    <h4>Onigiri</h4>
+                    <h5>O famoso bolinho de arroz japonês</h5>
+                    <h6>R$11,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
@@ -69,53 +69,53 @@
         <section class="Bebida Drink">
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/água.jpeg">
+                    <h4>Água</h4>
+                    <h5>Aguinha geladinha</h5>
+                    <h6>R$4,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/cafe.jpg">
+                    <h4>Bunny café</h4>
+                    <h5>Café com a carinha de coelho</h5>
+                    <h6>R$8,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/suco.webp">
+                    <h4>Suco de Laranja</h4>
+                    <h5>Que delicia</h5>
+                    <h6>R$7,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/cola.gif">
+                    <h4>Coca Cola 2L</h4>
+                    <h5>Bom com potato chipisu</h5>
+                    <h6>R$11,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/cerveja.gif">
+                    <h4>Cerveja</h4>
+                    <h5>Beba geladinha</h5>
+                    <h6>R$9,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </section>
         <h3>Por fim, sua sobremesa</h3>
-        <section class="Sobremesa Desert">
-            <div class="Box" onclick="seleciona(this,'Desert')">
+        <section class="Sobremesa Dessert">
+            <div class="Box" onclick="seleciona(this,'Dessert')">
                 <div class="Inner-Box">
                     <img src="Imagens/Buche de Noel.webp">
                     <h4>B-Roll</h4>
@@ -124,50 +124,75 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
-            <div class="Box" onclick="seleciona(this,'Desert')">
+            <div class="Box" onclick="seleciona(this,'Dessert')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/panqueca.jpg">
+                    <h4>Panqueca</h4>
+                    <h5>Panqueca Americana com mirtilo</h5>
+                    <h6>R$19,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
-            <div class="Box" onclick="seleciona(this,'Desert')">
+            <div class="Box" onclick="seleciona(this,'Dessert')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/pudim.png">
+                    <h4>Pudim</h4>
+                    <h5>Pudim não precisa de comentários</h5>
+                    <h6>R$15,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
-            <div class="Box" onclick="seleciona(this,'Desert')">
+            <div class="Box" onclick="seleciona(this,'Dessert')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/cake.png">
+                    <h4>Strawberry Cake</h4>
+                    <h5>Bolo de morango com morango</h5>
+                    <h6>R$34,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
-            <div class="Box" onclick="seleciona(this,'Desert')">
+            <div class="Box" onclick="seleciona(this,'Dessert')">
                 <div class="Inner-Box">
-                    <img src="Imagens/B-roll.png">
-                    <h4>B-Roll</h4>
-                    <h5>Tiras de bacon recheado de batata</h5>
-                    <h6>R$35,90</h6>
+                    <img src="Imagens/ice-cream-anime.gif">
+                    <h4>Sorvete</h4>
+                    <h5>Sorvete gourmet</h5>
+                    <h6>R$15,20</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
             </div>
         </section>
     </main>
+    <div class="confirmacao escondido">
+        <div class="telaConfirmacao">
+            <h2>Confirme seu pedido</h2>
+            <div class="boxFinaliza comida">
+                <h4>Aqui</h4><h5>valor</h5>
+
+            </div>
+            <div class="boxFinaliza bebida">
+                <h4>Aqui</h4><h5>valor</h5>
+            </div>
+            <div class="boxFinaliza sobremesa">
+                <h4>Aqui</h4><h5>valor</h5>
+            </div> 
+            <div class="boxFinaliza valorFinal">
+                <h4>Total</h4>
+                <h5>valor</h5>
+            </div>
+            <div class="finalizaPedido" onclick="fechaConta()">
+                Tudo certo, pode pedir!
+            </div>
+            <div class="cancela" onclick="cancelar()"><h2 >Cancelar</h2> </div>
+                   
+
+        </div>
+    </div>
     <footer>
         <div>
             <h2>Selecione os 3 itens</h2>
             <h2>para fechar o pedido</h2>
         </div>
-        <div class="botaoBottom escondido" onclick="fechaConta()">
+        <div class="botaoBottom escondido" onclick="confirmacao()">
             <h2>Selecione os 3 itens</h2>
             <h2>para fechar o pedido</h2>
         </div>
