--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
             <h2>para fechar o pedido</h2>
         </div>
         <div class="botaoBottom escondido" onclick="confirmacao()">
-            <h2>Selecione os 3 itens</h2>
-            <h2>para fechar o pedido</h2>
+            <h2>Fechar pedido</h2>
         </div>
         
     </footer>
