--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="estilo.css" />
     <title>DrivenEats</title>
 </head>
+
 <body>
     <header>
         <h1>DrivenEats</h1>
@@ -166,15 +169,17 @@
         <div class="telaConfirmacao">
             <h2>Confirme seu pedido</h2>
             <div class="boxFinaliza comida">
-                <h4>Aqui</h4><h5>valor</h5>
-
+                <h4>Aqui</h4>
+                <h5>valor</h5>
             </div>
             <div class="boxFinaliza bebida">
-                <h4>Aqui</h4><h5>valor</h5>
+                <h4>Aqui</h4>
+                <h5>valor</h5>
             </div>
             <div class="boxFinaliza sobremesa">
-                <h4>Aqui</h4><h5>valor</h5>
-            </div> 
+                <h4>Aqui</h4>
+                <h5>valor</h5>
+            </div>
             <div class="boxFinaliza valorFinal">
                 <h4>Total</h4>
                 <h5>valor</h5>
@@ -182,9 +187,9 @@
             <div class="finalizaPedido" onclick="fechaConta()">
                 Tudo certo, pode pedir!
             </div>
-            <div class="cancela" onclick="cancelar()"><h2 >Cancelar</h2> </div>
-                   
-
+            <div class="cancela" onclick="cancelar()">
+                <h2>Cancelar</h2>
+            </div>
         </div>
     </div>
     <footer>
@@ -195,10 +200,10 @@
         <div class="botaoBottom escondido" onclick="confirmacao()">
             <h2>Fechar pedido</h2>
         </div>
-        
     </footer>
-<script src="script.js"></script> 
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
+    <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
