--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="Inner-Box">
                     <img src="Imagens/água.jpeg">
                     <h4>Água</h4>
-                    <h5>Aguinha geladinha</h5>
+                    <h5>Aguinha geladinha engarrafada</h5>
                     <h6>R$4,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
@@ -91,7 +91,7 @@
             <div class="Box" onclick="seleciona(this,'Drink')">
                 <div class="Inner-Box">
                     <img src="Imagens/suco.webp">
-                    <h4>Suco de Laranja</h4>
+                    <h4>Suco de Laranja com gelo</h4>
                     <h5>Que delicia</h5>
                     <h6>R$7,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
@@ -110,7 +110,7 @@
                 <div class="Inner-Box">
                     <img src="Imagens/cerveja.gif">
                     <h4>Cerveja</h4>
-                    <h5>Beba geladinha</h5>
+                    <h5>Beba geladinha Little Chop</h5>
                     <h6>R$9,90</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
@@ -158,7 +158,7 @@
                 <div class="Inner-Box">
                     <img src="Imagens/ice-cream-anime.gif">
                     <h4>Sorvete</h4>
-                    <h5>Sorvete gourmet</h5>
+                    <h5>Sorvete gourmet francês</h5>
                     <h6>R$15,20</h6>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
